HPCDATAMGM-1696 - temp solution to limit process of uploads via URL

--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
@@ -123,6 +123,7 @@ hpc.bus.createLdapAccountOnly=false
 #hpc.bus.dataObjectFileSystemUploadTaskExecutorThreadPoolSize=3
 #hpc.bus.sendReviewNotificationToUser=false
 #hpc.bus.exportDirectory=/mnt/IRODsTest/FNL_SF_Archive/data
+#hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
 
 #############################################################################
 # Application Services Properties.
