--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
@@ -122,6 +122,7 @@ hpc.bus.createLdapAccountOnly=false
 #hpc.bus.dataObjectFileSystemUploadTaskExecutorThreadPoolSize=3
 #hpc.bus.sendReviewNotificationToUser=false
 #hpc.bus.exportDirectory=${karaf.base}/data/tmp
+#hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
 
 #############################################################################
 # Application Services Properties.
