--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
@@ -122,6 +122,7 @@ hpc.bus.dataObjectDownloadTaskExecutorThreadPoolSize=10
 #hpc.bus.dataObjectFileSystemUploadTaskExecutorThreadPoolSize=3
 #hpc.bus.sendReviewNotificationToUser=false
 #hpc.bus.exportDirectory=/mnt/IRODsScratch/data
+#hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
 
 #############################################################################
 # Application Services Properties.
