HPCDATAMGM-1679 - restart collection download tasks only for the server performing it

--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
@@ -311,3 +311,5 @@ hpc.scheduler.migration.cron.assignMigrationServer.delay=40 0/1 * * * ?
 # Runs monthly on the 1st at midnight
 #hpc.scheduler.cron.sendMonthlyUserQueryResults.delay=0 0 0 1 * ?
 
+#hpc.scheduler.processCollectionDownloadTasksPerformer=false
+
