--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
@@ -311,3 +311,5 @@ hpc.dao.oracle.password=<Configure Me>
 #hpc.scheduler.cron.sendWeeklyUserQueryResults.delay=0 0 0 * * 4
 # Runs monthly on the 1st at midnight
 #hpc.scheduler.cron.sendMonthlyUserQueryResults.delay=0 0 0 1 * ?
+
+#hpc.scheduler.processCollectionDownloadTasksPerformer=false
