HPCDATAMGM-1679 - restart data object download tasks for the server performing the tasks

--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
@@ -123,6 +123,7 @@ hpc.bus.dataObjectDownloadTaskExecutorThreadPoolSize=10
 #hpc.bus.sendReviewNotificationToUser=false
 #hpc.bus.exportDirectory=/mnt/IRODsScratch/data
 #hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
+#hpc.bus.processCollectionDownloadTasksPerformer=false
 
 #############################################################################
 # Application Services Properties.
@@ -311,5 +312,3 @@ hpc.dao.oracle.password=<Configure Me>
 #hpc.scheduler.cron.sendWeeklyUserQueryResults.delay=0 0 0 * * 4
 # Runs monthly on the 1st at midnight
 #hpc.scheduler.cron.sendMonthlyUserQueryResults.delay=0 0 0 1 * ?
-
-#hpc.scheduler.processCollectionDownloadTasksPerformer=false
