--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
@@ -124,6 +124,7 @@ hpc.bus.createLdapAccountOnly=false
 #hpc.bus.sendReviewNotificationToUser=false
 #hpc.bus.exportDirectory=/mnt/IRODsTest/FNL_SF_Archive/data
 #hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
+#hpc.bus.processCollectionDownloadTasksPerformer=false
 
 #############################################################################
 # Application Services Properties.
@@ -311,5 +312,4 @@ hpc.scheduler.migration.cron.assignMigrationServer.delay=40 0/1 * * * ?
 # Runs monthly on the 1st at midnight
 #hpc.scheduler.cron.sendMonthlyUserQueryResults.delay=0 0 0 1 * ?
 
-#hpc.scheduler.processCollectionDownloadTasksPerformer=false
 
