--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
@@ -123,6 +123,7 @@ hpc.bus.createLdapAccountOnly=false
 #hpc.bus.sendReviewNotificationToUser=false
 #hpc.bus.exportDirectory=${karaf.base}/data/tmp
 #hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
+#hpc.bus.processCollectionDownloadTasksPerformer=false
 
 #############################################################################
 # Application Services Properties.
@@ -309,5 +310,3 @@ hpc.dao.oracle.password=<Configure Me>
 #hpc.scheduler.cron.sendWeeklyUserQueryResults.delay=0 0 0 * * 4
 # Runs monthly on the 1st at midnight
 #hpc.scheduler.cron.sendMonthlyUserQueryResults.delay=0 0 0 1 * ?
-
-#hpc.scheduler.processCollectionDownloadTasksPerformer=false
