--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
@@ -124,6 +124,7 @@ hpc.bus.dataObjectFileSystemUploadTaskExecutorThreadPoolSize=3
 #hpc.bus.sendReviewNotificationToUser=false
 #hpc.bus.exportDirectory=/mnt/IRODsScratch/data
 #hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
+#hpc.bus.processCollectionDownloadTasksPerformer=false
 
 #############################################################################
 # Application Services Properties.
@@ -310,5 +311,3 @@ hpc.dao.oracle.password=<Configure Me>
 #hpc.scheduler.cron.sendWeeklyUserQueryResults.delay=0 0 0 * * 4
 # Runs monthly on the 1st at midnight
 #hpc.scheduler.cron.sendMonthlyUserQueryResults.delay=0 0 0 1 * ?
-
-#hpc.scheduler.processCollectionDownloadTasksPerformer=false
