--- a/src/hpc-cli/pom.xml
+++ b/src/hpc-cli/pom.xml
@@ -301,11 +301,11 @@
 	<repositories>
 		<repository>
 			<id>libs-milestone</id>
-			<url>http://repo.spring.io/libs-milestone/</url>
+			<url>https://repo.spring.io/libs-milestone/</url>
 		</repository>
 		<repository>
 			<id>libs-release</id>
-			<url>http://repo.spring.io/libs-release/</url>
+			<url>https://repo.spring.io/libs-release/</url>
 		</repository>
 		<repository>
 			<id>jline</id>
