--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>gov.nih.nci.hpc</groupId>
 		<artifactId>hpc</artifactId>
-		<version>2.28.1</version>
+		<version>2.28.2</version>
 	</parent>
 	<artifactId>hpc-server</artifactId>
 	<packaging>pom</packaging>
@@ -149,7 +149,11 @@
 					<artifactId>maven-install-plugin</artifactId>
 					<version>2.5.2</version>
 				</plugin>
-				
+				<plugin>
+    				<groupId>org.codehaus.mojo</groupId>
+    				<artifactId>versions-maven-plugin</artifactId>
+    				<version>2.14.2</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
