--- a/src/hpc-web/pom.xml
+++ b/src/hpc-web/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>spring-integration-http</artifactId>
         </dependency>
         <dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.11</version>
+		</dependency>
+        <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.68</version>
