--- a/test-automation/cuketests/pom.xml
+++ b/test-automation/cuketests/pom.xml
@@ -105,6 +105,21 @@
 	    <version>3.9.1</version>
 	    <scope>test</scope>
 	 </dependency>
+   <dependency>
+       <groupId>com.jayway.jsonpath</groupId>
+       <artifactId>json-path</artifactId>
+       <version>2.4.0</version>
+   </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.19.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.19.0</version>
+    </dependency>
   </dependencies>
 
   <build>
