--- a/src/hpc-web/src/main/resources/appconfigs/common.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/common.conf
@@ -1,5 +1,6 @@
 #spring.profiles.active=local
 app.version=@project.version@
+contact.email=NCIDataVault@mail.nih.gov
 
 gov.nih.nci.hpc.server.dataObject=${gov.nih.nci.hpc.server}/dataObject
 gov.nih.nci.hpc.server.user=${gov.nih.nci.hpc.server}/user
