HPCDATAMGM-1779 - added API to bulk update of metadata + test cases + API doc spec

--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
@@ -125,6 +125,7 @@ hpc.bus.createLdapAccountOnly=false
 #hpc.bus.exportDirectory=/mnt/IRODsTest/FNL_SF_Archive/data
 #hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
 #hpc.bus.processCollectionDownloadTasksPerformer=false
+#hpc.bus.hpc.bus.bulkMetadataDataUpdateLimit=100
 
 #############################################################################
 # Application Services Properties.
