--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
@@ -124,6 +124,7 @@ hpc.bus.createLdapAccountOnly=false
 #hpc.bus.exportDirectory=${karaf.base}/data/tmp
 #hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
 #hpc.bus.processCollectionDownloadTasksPerformer=false
+#hpc.bus.hpc.bus.bulkMetadataDataUpdateLimit=100
 
 #############################################################################
 # Application Services Properties.
