--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
@@ -125,6 +125,7 @@ hpc.bus.dataObjectFileSystemUploadTaskExecutorThreadPoolSize=3
 #hpc.bus.exportDirectory=/mnt/IRODsScratch/data
 #hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
 #hpc.bus.processCollectionDownloadTasksPerformer=false
+#hpc.bus.hpc.bus.bulkMetadataDataUpdateLimit=100
 
 #############################################################################
 # Application Services Properties.
