--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
@@ -124,6 +124,7 @@ hpc.bus.dataObjectDownloadTaskExecutorThreadPoolSize=10
 #hpc.bus.exportDirectory=/mnt/IRODsScratch/data
 #hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
 #hpc.bus.processCollectionDownloadTasksPerformer=false
+#hpc.bus.hpc.bus.bulkMetadataDataUpdateLimit=100
 
 #############################################################################
 # Application Services Properties.
