HPCDATAMGM-1778: Add controller for adding bulk metadata

--- a/src/hpc-web/src/main/resources/appconfigs/common.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/common.conf
@@ -22,6 +22,7 @@ gov.nih.nci.hpc.server.collection.acl=${gov.nih.nci.hpc.server}/collection/acl
 gov.nih.nci.hpc.server.collection.acl.user=${gov.nih.nci.hpc.server}/collection/acl/user
 gov.nih.nci.hpc.server.docs=${gov.nih.nci.hpc.server}/dm/docs
 gov.nih.nci.hpc.server.metadataattributes=${gov.nih.nci.hpc.server}/metadataAttributes
+gov.nih.nci.hpc.server.metadata=${gov.nih.nci.hpc.server}/metadata
 gov.nih.nci.hpc.server.search.collection.compound=${gov.nih.nci.hpc.server}/collection/query
 gov.nih.nci.hpc.server.search.dataobject.compound=${gov.nih.nci.hpc.server}/dataObject/query
 gov.nih.nci.hpc.server.notification.receipts=${gov.nih.nci.hpc.server}/notification/deliveryReceipts
