--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -37,7 +37,8 @@
 		<spring.retry.version>1.3.0</spring.retry.version>
         <spring.security.version>3.2.10.RELEASE</spring.security.version>
         <aspectj.version>1.9.6</aspectj.version>
-		<amazon-aws.version>1.12.420</amazon-aws.version>
+		<amazon-aws-v1.version>1.12.420</amazon-aws-v1.version>
+		<amazon-aws-v2.version>2.20.98</amazon-aws-v2.version>
 		<jackson.version>2.12.7</jackson.version>
 		<jargon.version>4.3.2.2-RELEASE</jargon.version>
 		<jjwt.version>0.9.1</jjwt.version>
@@ -285,6 +286,23 @@
     				<artifactId>mockito-core</artifactId>
     				<version>1.10.19</version>
 			</dependency>
+			
+			<dependency>
+            	<groupId>com.amazonaws</groupId>
+            	<artifactId>aws-java-sdk-bom</artifactId>
+            	<version>${amazon-aws-v1.version}</version>
+            	<type>pom</type>
+            	<scope>import</scope>
+        	</dependency>
+        	<dependency>
+          		<groupId>software.amazon.awssdk</groupId>
+          		<artifactId>bom</artifactId>
+          		<version>${amazon-aws-v2.version}</version>
+          		<type>pom</type>
+          		<scope>import</scope>
+        	</dependency>
+        
+        <!--
 			<dependency>
 				<groupId>com.amazonaws</groupId>
 				<artifactId>aws-java-sdk-s3</artifactId>
@@ -294,7 +312,7 @@
 				<groupId>com.amazonaws</groupId>
 				<artifactId>aws-java-sdk-secretsmanager</artifactId>
 				<version>${amazon-aws.version}</version>
-			</dependency>
+			</dependency> -->
 			<dependency>
 				<groupId>org.irods.jargon</groupId>
 				<artifactId>jargon-core</artifactId>
