Completed TransferManager, client and signer init + download URL generation

--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -52,7 +52,11 @@
 							com.google.cloud:google-cloud-core;scope=compile|runtime,
 							com.google.cloud:google-cloud-core-http;scope=compile|runtime,
 							com.google.cloud:google-cloud-storage;scope=compile|runtime,
-							com.google.auth:google-auth-library-oauth2-http;scope=compile|runtime
+							com.google.auth:google-auth-library-oauth2-http;scope=compile|runtime,
+							<!-- Note: We embed this dependency because it exports classes from the AWS SDK S3 jar and created a deployment issue. 
+							           Need to check if in future versions this was fixed by Amazon, and this dependency can be removed here and 
+							           and added to features.xml instead under the AWS SDK V2 <feature> -->
+							software.amazon.awssdk:s3-transfer-manager;scope=compile|runtime
 						</Embed-Dependency>
 						<Export-Package>
 							com.google.api,
@@ -67,7 +71,16 @@
 							com.google.cloud.storage.spi.v1,
 							com.google.cloud.http,
 							com.google.auth.http,
-							com.google.auth.oauth2
+							com.google.auth.oauth2,
+							software.amazon.awssdk.transfer.s3,
+							software.amazon.awssdk.transfer.s3.config,
+							software.amazon.awssdk.transfer.s3.progress,
+							software.amazon.awssdk.transfer.s3.model,
+							software.amazon.awssdk.transfer.s3.internal,
+							software.amazon.awssdk.transfer.s3.internal.model,
+							software.amazon.awssdk.transfer.s3.internal.progress,
+							software.amazon.awssdk.transfer.s3.internal.utils,
+							software.amazon.awssdk.transfer.s3.internal.serialization
 						</Export-Package>
 					</instructions>
 				</configuration>
@@ -120,6 +133,10 @@
 			<groupId>software.amazon.awssdk</groupId>
     		<artifactId>s3-transfer-manager</artifactId>
 		</dependency>
+		<dependency>
+      		<groupId>software.amazon.awssdk.crt</groupId>
+      		<artifactId>aws-crt</artifactId>
+   		</dependency>
 		<dependency>
 		    <groupId>org.apache.cxf</groupId>
 		    <artifactId>cxf-rt-rs-client</artifactId>
