--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -38,7 +38,8 @@
         <spring.security.version>3.2.10.RELEASE</spring.security.version>
         <aspectj.version>1.9.6</aspectj.version>
 		<amazon-aws-v1.version>1.12.420</amazon-aws-v1.version>
-		<amazon-aws-v2.version>2.20.98</amazon-aws-v2.version>
+		<amazon-aws-v2.version>2.20.101</amazon-aws-v2.version>
+		<amazon-aws-crt.version>0.22.5</amazon-aws-crt.version>
 		<jackson.version>2.12.7</jackson.version>
 		<jargon.version>4.3.2.2-RELEASE</jargon.version>
 		<jjwt.version>0.9.1</jjwt.version>
@@ -301,8 +302,13 @@
           		<type>pom</type>
           		<scope>import</scope>
         	</dependency>
+        	<dependency>
+      			<groupId>software.amazon.awssdk.crt</groupId>
+      			<artifactId>aws-crt</artifactId>
+      			<version>${amazon-aws-crt.version}</version>
+   			</dependency>
         
-        <!--
+        <!-- TODO: clean up
 			<dependency>
 				<groupId>com.amazonaws</groupId>
 				<artifactId>aws-java-sdk-s3</artifactId>
