Updating config from /mnt/IRODsScratch to /mnt/DMETemp.

--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
@@ -20,7 +20,7 @@ hpc.ws.rs.secured-port=8080
 hpc.ws.rs.path=
 #hpc.ws.rs.stackTraceEnabled=true
 #hpc.ws.rs.api-version=1.5.0
-hpc.ws.rs.attachment-tmp-directory=/mnt/IRODsScratch/HPC_DME_Prod/attachments
+hpc.ws.rs.attachment-tmp-directory=/mnt/DMETemp/HPC_DME_Prod/attachments
 #hpc.ws.rs.attachment-memory-threshold=104857600
 hpc.ws.rs.attachment-max-size=10737418240
 
@@ -122,7 +122,7 @@ hpc.ws.rs.jetty-engine.maxThreads=200
 hpc.bus.dataObjectDownloadTaskExecutorThreadPoolSize=10
 hpc.bus.dataObjectFileSystemUploadTaskExecutorThreadPoolSize=3
 #hpc.bus.sendReviewNotificationToUser=false
-#hpc.bus.exportDirectory=/mnt/IRODsScratch/data
+hpc.bus.exportDirectory=/mnt/DMETemp/data
 #hpc.bus.maxDataTranferUploadInProgressWithGeneratedUrlToProcess=100
 #hpc.bus.processCollectionDownloadTasksPerformer=false
 #hpc.bus.hpc.bus.bulkMetadataDataUpdateLimit=100
@@ -138,7 +138,7 @@ hpc.bus.dataObjectFileSystemUploadTaskExecutorThreadPoolSize=3
 hpc.service.systemAccount.aws.secretName=ncifhpcdmsvcp
 hpc.service.systemAccount.aws.useSecretsManager=false
 
-hpc.service.dataTransfer.downloadDirectory=/mnt/IRODsScratch/data/S3
+hpc.service.dataTransfer.downloadDirectory=/mnt/DMETemp/data/S3
 hpc.service.dataTransfer.maxSyncDownloadFileSize=10737418240
 #hpc.service.dataTransfer.maxDeepArchiveInProgressDays=2 
 #hpc.service.dataTransfer.globusTokenExpirationPeriod=120
