HPCDATAMGM-1809: Use a single irods API call to get user permissions to base paths and store them in the session

--- a/src/hpc-web/src/main/resources/appconfigs/common.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/common.conf
@@ -20,6 +20,7 @@ gov.nih.nci.hpc.server.user.authenticate=${gov.nih.nci.hpc.server}/authenticate
 gov.nih.nci.hpc.server.collection=${gov.nih.nci.hpc.server}/collection
 gov.nih.nci.hpc.server.collection.acl=${gov.nih.nci.hpc.server}/collection/acl
 gov.nih.nci.hpc.server.collection.acl.user=${gov.nih.nci.hpc.server}/collection/acl/user
+gov.nih.nci.hpc.server.childCollections.acl.user=${gov.nih.nci.hpc.server}/childCollections/acl/user
 gov.nih.nci.hpc.server.docs=${gov.nih.nci.hpc.server}/dm/docs
 gov.nih.nci.hpc.server.metadataattributes=${gov.nih.nci.hpc.server}/metadataAttributes
 gov.nih.nci.hpc.server.metadata=${gov.nih.nci.hpc.server}/metadata
