Add aws region property

--- a/test-automation/cuketests/configs/Configuration.properties
+++ b/test-automation/cuketests/configs/Configuration.properties
@@ -18,9 +18,12 @@ googleRefreshToken=< Configure Me >
 
 googleRefreshTokenBlock= < Configure Me >
 
+## Google Drive related property
+googleDriveAccessToken=< Configure Me >
+
 ## AWS Related properties
 awsAccessKey=< Configure Me >
-
 awsSecretKey=< Configure Me >
+awsRegion=< Configure Me >
 
 
