--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
@@ -283,9 +283,9 @@ hpc.scheduler.cron.completeCollectionDownloadTasks.delay=55 0/1 * * * ?
 #Runs every minute at 47 secs
 hpc.scheduler.cron.completeGlobusBunchingCollectionDownloadTasks.delay=47 0/1 * * * ?
 #Runs every 60 minutes
-hpc.scheduler.cron.refreshMetadataViews.delay=0 0/60 * * * ?
+hpc.scheduler.cron.refreshHourlyViews.delay=0 0/60 * * * ?
 #Runs every 60 minutes
-hpc.scheduler.cron.refreshReportViews.delay=0 0/60 * * * ?
+hpc.scheduler.cron.refreshDailyViews.delay=0 0 6 * * *
 #Runs every minute at 10 secs
 hpc.scheduler.migration.cron.processDataObjectMigrationReceived.delay=10 0/1 * * * ?
 #Runs every minute at 15 secs
