--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -109,6 +109,10 @@
 			<artifactId>jargon-user-tagging</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.irods.jargon</groupId>
+			<artifactId>jargon-pool</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
 		</dependency>
