--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -311,6 +311,11 @@
 				<version>${jargon.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.irods.jargon</groupId>
+				<artifactId>jargon-pool</artifactId>
+				<version>${jargon.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
 				<version>2.12.7.1</version>
