--- a/src/hpc-web/src/main/resources/appconfigs/common.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/common.conf
@@ -15,6 +15,7 @@ gov.nih.nci.hpc.server.bulkregistration.all=${gov.nih.nci.hpc.server}/registrati
 gov.nih.nci.hpc.server.v2.bulkregistration=${gov.nih.nci.hpc.server}/v2/registration
 gov.nih.nci.hpc.server.model=${gov.nih.nci.hpc.server}/dm/model
 gov.nih.nci.hpc.server.refresh.model=${gov.nih.nci.hpc.server}/refreshDataManagementConfigurations
+gov.nih.nci.hpc.server.refresh.investigator=${gov.nih.nci.hpc.server}/refreshInvestigators
 gov.nih.nci.hpc.server.query=${gov.nih.nci.hpc.server}/query
 gov.nih.nci.hpc.server.user.authenticate=${gov.nih.nci.hpc.server}/authenticate
 gov.nih.nci.hpc.server.collection=${gov.nih.nci.hpc.server}/collection
