--- a/src/hpc-server/hpc-client/pom.xml
+++ b/src/hpc-server/hpc-client/pom.xml
@@ -22,29 +22,8 @@
 		<version>2.37.0</version>
 	</parent>
 	<artifactId>hpc-client</artifactId>
-	<packaging>bundle</packaging>
+	<packaging>jar</packaging>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>
-							gov.nih.nci.hpc.client
-						</Export-Package>
-						<Private-Package>
-							gov.nih.nci.hpc.client.impl
-						</Private-Package>
-						<Import-Package>*</Import-Package>
-					</instructions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
