--- a/src/hpc-server/hpc-domain-model/pom.xml
+++ b/src/hpc-server/hpc-domain-model/pom.xml
@@ -21,7 +21,7 @@
 		<version>2.37.0</version>
 	</parent>
 	<artifactId>hpc-domain-model</artifactId>
-	<packaging>bundle</packaging>
+	<packaging>jar</packaging>
 
 	<build>
 		<plugins>
@@ -157,20 +157,6 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>
-							gov.nih.nci.hpc.domain.model
-						</Export-Package>
-						<Import-Package>*</Import-Package>
-					</instructions>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
