--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -21,59 +21,8 @@
 		<version>2.37.0</version>
 	</parent>
 	<artifactId>hpc-integration-impl</artifactId>
-	<packaging>bundle</packaging>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Private-Package>
-							gov.nih.nci.hpc.integration.globus.impl,
-							gov.nih.nci.hpc.integration.s3.impl,
-							gov.nih.nci.hpc.integration.googledrive.impl,
-							gov.nih.nci.hpc.integration.googlecloudstorage.impl,
-							gov.nih.nci.hpc.integration.ldap.impl,
-							gov.nih.nci.hpc.integration.irods.impl,
-							gov.nih.nci.hpc.integration.sps.impl
-						</Private-Package>
-						<Import-Package>
-							org.springframework.scheduling.config,
-							org.springframework.scheduling.concurrent,
-							org.springframework.retry.support,
-							*
-						</Import-Package>
-						<Embed-Dependency>
-							com.google.api:api-common;scope=compile|runtime,
-							com.google.cloud:google-cloud-core;scope=compile|runtime,
-							com.google.cloud:google-cloud-core-http;scope=compile|runtime,
-							com.google.cloud:google-cloud-storage;scope=compile|runtime,
-							com.google.auth:google-auth-library-oauth2-http;scope=compile|runtime
-						</Embed-Dependency>
-						<Export-Package>
-							com.google.api,
-							com.google.api.core,
-							com.google.api.gax.*,
-							com.google.api.pathtemplate,
-							com.google.api.resourcenames,
-							com.google.cloud,
-							com.google.cloud.spi,
-							com.google.cloud.storage,
-							com.google.cloud.storage.spi,
-							com.google.cloud.storage.spi.v1,
-							com.google.cloud.http,
-							com.google.auth.http,
-							com.google.auth.oauth2
-						</Export-Package>
-					</instructions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<packaging>jar</packaging>
+	
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
