--- a/src/hpc-server/hpc-scheduler/pom.xml
+++ b/src/hpc-server/hpc-scheduler/pom.xml
@@ -21,31 +21,7 @@
 		<version>2.37.0</version>
 	</parent>
 	<artifactId>hpc-scheduler</artifactId>
-	<packaging>bundle</packaging>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package/>
-						<Private-Package>
-							gov.nih.nci.hpc.scheduler.impl
-						</Private-Package>
-						<Import-Package>
-							org.springframework.scheduling.config,
-							org.springframework.scheduling.concurrent,
-							*
-						</Import-Package>
-					</instructions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>	
+	<packaging>jar</packaging>
 	
 	<dependencies>
 		<dependency>
