Initial commit for 2nd hop impl to Aspera

--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
@@ -217,6 +217,9 @@ hpc.integration.ldap.password=<Configure Me>
 # Google Cloud Storage
 #hpc.integration.googlecloudstorage.downloadExecutorThreadPoolSize=100
 
+# Aspera
+#hpc.integration.aspera.downloadExecutorThreadPoolSize=8
+
 # SPS
 #hpc.integration.sps.URL=https://authproxyintdev.nih.gov/authazws/AuthRestService/authz/
 #hpc.integration.sps.resource=authproxyintdev.nih.gov/nihuser
@@ -272,6 +275,8 @@ hpc.scheduler.cron.startS3DataObjectDownloadTasks.delay=35 0/1 * * * ?
 hpc.scheduler.cron.startGoogleDriveDataObjectDownloadTasks.delay=35 0/1 * * * ?
 #Runs every minute at 39 secs
 hpc.scheduler.cron.startGoogleCloudStorageDataObjectDownloadTasks.delay=39 0/1 * * * ?
+#Runs every minute at 44 secs
+hpc.scheduler.cron.startAsperaDataObjectDownloadTasks.delay=44 0/1 * * * ?
 #Runs every minute at 50 secs
 hpc.scheduler.cron.processCollectionDownloadTasks.delay=50 0/1 * * * ?
 #Runs every minute at 45 secs
