--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
@@ -218,6 +218,9 @@ hpc.integration.ldap.password=< Configure Me >
 # Google Cloud Storage
 #hpc.integration.googlecloudstorage.downloadExecutorThreadPoolSize=100
 
+# Aspera
+#hpc.integration.aspera.downloadExecutorThreadPoolSize=8
+
 # SPS
 hpc.integration.sps.URL=https://authproxyinttest.nih.gov/authazws/AuthRestService/authz/
 hpc.integration.sps.resource=authproxyinttest.nih.gov/nihuser
@@ -269,6 +272,8 @@ hpc.dao.oracle.password=<Configure Me>
 #hpc.scheduler.cron.startGlobusDataObjectDownloadTasks.delay=35 0/1 * * * ?
 #Runs every minute at 39 secs
 #hpc.scheduler.cron.startGoogleCloudStorageDataObjectDownloadTasks.delay=39 0/1 * * * ?
+#Runs every minute at 44 secs
+#hpc.scheduler.cron.startAsperaDataObjectDownloadTasks.delay=44 0/1 * * * ?
 #Runs every minute at 35 secs
 #hpc.scheduler.cron.startS3DataObjectDownloadTasks.delay=35 0/1 * * * ?
 #Runs every minute at 35 secs
