--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
@@ -217,6 +217,9 @@ hpc.integration.ldap.password=< Configure Me >
 # Google Cloud Storage
 #hpc.integration.googlecloudstorage.downloadExecutorThreadPoolSize=100
 
+# Aspera
+#hpc.integration.aspera.downloadExecutorThreadPoolSize=8
+
 # SPS
 hpc.integration.sps.URL=https://authproxyint.nih.gov/authazws/AuthRestService/authz/
 hpc.integration.sps.resource=authproxyint.nih.gov/nihuser
@@ -268,6 +271,8 @@ hpc.dao.oracle.password=<Configure Me>
 #hpc.scheduler.cron.startGlobusDataObjectDownloadTasks.delay=35 0/1 * * * ?
 #Runs every minute at 39 secs
 #hpc.scheduler.cron.startGoogleCloudStorageDataObjectDownloadTasks.delay=39 0/1 * * * ?
+#Runs every minute at 44 secs
+#hpc.scheduler.cron.startAsperaDataObjectDownloadTasks.delay=44 0/1 * * * ?
 #Runs every minute at 35 secs
 #hpc.scheduler.cron.startS3DataObjectDownloadTasks.delay=35 0/1 * * * ?
 #Runs every minute at 35 secs
