code complete for ascp exec

--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
@@ -219,6 +219,8 @@ hpc.integration.ldap.password=< Configure Me >
 
 # Aspera
 #hpc.integration.aspera.downloadExecutorThreadPoolSize=8
+#hpc.integration.aspera.ascp=
+#hpc.integration.aspera.privateKeyFile=
 
 # SPS
 hpc.integration.sps.URL=https://authproxyint.nih.gov/authazws/AuthRestService/authz/
