--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
@@ -218,6 +218,8 @@ hpc.integration.ldap.password=<configure me>
 
 # Aspera
 #hpc.integration.aspera.downloadExecutorThreadPoolSize=8
+#hpc.integration.aspera.ascp=
+#hpc.integration.aspera.privateKeyFile=
 
 # SPS
 #hpc.integration.sps.URL=https://authproxyintdev.nih.gov/authazws/AuthRestService/authz/
