--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
@@ -220,6 +220,8 @@ hpc.integration.ldap.password=< Configure Me >
 
 # Aspera
 #hpc.integration.aspera.downloadExecutorThreadPoolSize=8
+#hpc.integration.aspera.ascp=
+#hpc.integration.aspera.privateKeyFile=
 
 # SPS
 hpc.integration.sps.URL=https://authproxyinttest.nih.gov/authazws/AuthRestService/authz/
