HPCDATAMGM-1830: Contact "null" for support appears when user tries to download data over 3 TB

--- a/src/hpc-web/src/main/resources/appconfigs/common.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/common.conf
@@ -115,7 +115,7 @@ dme.token.expiration.period=110
 dme.globus.public.endpoints=e2620047-6d04-11e5-ba46-22000b92c6ec|NIH HPC Data Transfer,dabdccc3-6d04-11e5-ba46-22000b92c6ec|nihfnlcr#gridftp1
 
 # Max collection download size
-dme.max.collection.download.size=3000000000000
+dme.max.allowed.download.size=3000000000000
 
 # Keep this empty lines below
 
