HPCDATAMGM-1824: web app changes and additional server changes to display retry info for single data object

--- a/src/hpc-web/src/main/resources/appconfigs/local-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/local-env.conf
@@ -2,9 +2,9 @@ app.env=Local
 gov.nih.nci.hpc.login.module=ldap
 #gov.nih.nci.hpc.login.module=hpc
 
-gov.nih.nci.hpc.server=https://localhost:7738/hpc-server
-#gov.nih.nci.hpc.server=https://fsdmel-dsapi01d.ncifcrf.gov:7738/hpc-server
-#gov.nih.nci.hpc.server=https://fsdmel-dsapi01t.ncifcrf.gov:7738/hpc-server
+#gov.nih.nci.hpc.server=https://localhost:7738/hpc-server
+#gov.nih.nci.hpc.server=https://fsdsl-dmeapi01d.ncifcrf.gov:7738/hpc-server
+gov.nih.nci.hpc.server=https://fsdmel-dsapi01t.ncifcrf.gov:7738/hpc-server
 #gov.nih.nci.hpc.server=https://fsdmel-apibp01p.ncifcrf.gov:8080
 
 gov.nih.nci.hpc.ssl.cert=c:\\DEV\\temp\\DEV\\keystore.jks
