--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server-local.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server-local.properties
@@ -147,32 +147,41 @@ hpc.service.serverId=server-id
 # Application Services Properties.
 #############################################################################
 
+hpc.service.dataTransfer.downloadDirectory=/mnt/DMETemp/test/data/S3
+hpc.service.dataTransfer.maxSyncDownloadFileSize=5368709120
+hpc.service.dataTransfer.maxDeepArchiveInProgressDays=2
+hpc.service.dataTransfer.maxPermittedS3DownloadsForGlobus=7
+hpc.service.dataTransfer.globusTokenExpirationPeriod=120
+hpc.service.dataTransfer.globusCollectionDownloadBunching=true
 hpc.service.security.authenticationTokenSignatureKey=hpc-token-signature-key
 hpc.service.security.authenticationTokenExpirationPeriod=2160
-hpc.service.security.dataManagementAccountExpirationPeriod=480
 hpc.service.security.authenticationTokenExpirationPeriodSso=120
-
-hpc.service.dataTransfer.downloadDirectory=${karaf.base}/data/tmp/S3
-
-hpc.service.dataSearch.searchResultsPageSize=100
-hpc.service.dataSearch.defaultCollectionLevelFilter.level=1
-hpc.service.dataSearch.defaultCollectionLevelFilter.operator=NUM_GREATER_OR_EQUAL
-hpc.service.dataSearch.defaultDataObjectLevelFilter.level=1
-hpc.service.dataSearch.defaultDataObjectLevelFilter.operator=EQUAL
-
-hpc.service.notification.formatsPath=${karaf.base}/etc/hpc-server/notificationFormats.json
+hpc.service.security.dataManagementAccountExpirationPeriod=480
+hpc.service.systemAccount.aws.secretName=< Configure Me >
+hpc.service.systemAccount.aws.region=us-east-1
+hpc.service.systemAccount.aws.useSecretsManager=false
+hpc.service.notification.formatsPath=notificationFormats.json
 hpc.service.notification.mail.host=mailfwd.nih.gov
 hpc.service.notification.mail.port=25
 hpc.service.notification.notificationDeliveryReceiptsPageSize=100
 hpc.service.notification.systemAdministratorUserId=dinhys
-
+hpc.service.notification.storageAdministratorUserIds=dinhys
+hpc.service.dataSearch.searchResultsPageSize=100
+hpc.service.dataSearch.searchResultsMaxPageSize=10000
+hpc.service.dataSearch.defaultCollectionLevelFilter.level=1
+hpc.service.dataSearch.defaultCollectionLevelFilter.operator=NUM_GREATER_OR_EQUAL
+hpc.service.dataSearch.defaultDataObjectLevelFilter.level=1
+hpc.service.dataSearch.defaultDataObjectLevelFilter.operator=NUM_GREATER_OR_EQUAL
 hpc.service.dataManagement.systemAdminSubjects=rods rodsadmin
-hpc.service.dataManagement.defaultBaseUiURL=https://fr-s-hpcdm-gp-d.ncifcrf.gov
-hpc.service.dataManagement.defaultBulkRegistrationStatusUiDeepLink=uploadtask?taskId={task_id}&type=
+hpc.service.dataManagement.defaultBaseUiURL=https://fsdmel-dsapi01d.ncifcrf.gov
+hpc.service.dataManagement.defaultBulkRegistrationStatusUiDeepLink=uploadtask?taskId={task_id}&amp;type=
 hpc.service.dataManagement.downloadResultsPageSize=100
 hpc.service.dataManagement.registrationResultsPageSize=100
-
-hpc.service.event.invokerCollectionUpdateNotification=true
+hpc.service.dataManagement.deletedBasePath=/DME_Deleted_Archive
+hpc.service.dataManagement.deletedDataObjectRetentionDays=730
+hpc.service.event.invokerCollectionUpdateNotification=false
+hpc.service.dataMigration.serverIds=
+hpc.service.serverId=server-id
 
 #############################################################################
 # Integration Properties.
@@ -191,15 +200,17 @@ hpc.integration.irods.maxFilesAndDirsQueryMax=1000
 
 # Globus.
 hpc.integration.globus.globusAuthScope=urn:globus:auth:scope:transfer.api.globus.org:all
+hpc.integration.globus.excludeFromTransferFailureStatuses=OK,QUEUED
+hpc.integration.globus.recoverableTransferFailureStatuses=CONNECT_FAILED,TIME_OUT,ENDPOINT_ERROR,TIMEOUT,UNKNOWN
+hpc.integration.globus.recoverableFailureTimeout=15
 hpc.integration.globus.retry.maxAttempts=4
 hpc.integration.globus.retry.initialInterval=1000
 hpc.integration.globus.retry.intervalMultiplier=2.0
 hpc.integration.globus.retry.maxInterval=10000
-hpc.integration.globus.queueSize=90
+hpc.integration.globus.queueSize=3
 
 # LDAP.
 hpc.integration.ldap.URL=ldaps://NIHDCADHUB2.nih.gov:636
-#hpc.integration.ldap.URL=ldaps://ldapad.nih.gov:636
 hpc.integration.ldap.base=OU=NIH,OU=AD,DC=nih,DC=gov
 hpc.integration.ldap.username=ncihpcdmsvcad@nih.gov
 hpc.integration.ldap.password=< Configure Me >
@@ -212,11 +223,29 @@ hpc.integration.ldap.userIdDomainName=nih.gov
 
 # S3
 hpc.integration.s3.downloadExecutorThreadPoolSize=20
+hpc.integration.s3.executorThreadPoolSize=8
+hpc.integration.s3.awsTransferManagerThreadPoolSize=8
+hpc.integration.s3.pathStyleAccessEnabledProviders=CLOUDIAN,VAST
+hpc.integration.s3.minimumUploadPartSize=52428800
+hpc.integration.s3.multipartUploadThreshold=52428800
+hpc.integration.s3.restoreNumDays=2
+hpc.integration.s3.tieringEndpoint=https://s3.amazonaws.com
+hpc.integration.s3.socketTimeout=120000
+
+# Google Drive
+hpc.integration.googledrive.hpcApplicationName=NCI-HPC-DME
+hpc.integration.googledrive.downloadExecutorThreadPoolSize=8
+hpc.integration.googledrive.chunkSize=5242880
+
+# Google Cloud
+hpc.integration.googlecloudstorage.downloadExecutorThreadPoolSize=8
 
 # SPS
 hpc.integration.sps.URL=https://authproxyint.nih.gov/authazws/AuthRestService/authz/
 hpc.integration.sps.resource=authproxyint.nih.gov/nihuser
 hpc.integration.sps.domain=NIH
+
+   
 
 #############################################################################
 # DAO Properties.
