--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
@@ -179,6 +179,7 @@ hpc.service.event.invokerCollectionUpdateNotification=true
 hpc.integration.irods.key=<Configure Me>
 hpc.integration.irods.algorithm=<Configure Me>
 #hpc.integration.irods.pamAuthentication=false
+#hpc.integration.irods.maxIdlePerKey=-1
 
 # Globus.
 #hpc.integration.globus.globusAuthScope=urn:globus:auth:scope:transfer.api.globus.org:all
