--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-prod.properties
@@ -180,6 +180,7 @@ hpc.integration.irods.basePath=< Configure Me >
 hpc.integration.irods.key=<Configure Me>
 hpc.integration.irods.algorithm=<Configure Me>
 #hpc.integration.irods.pamAuthentication=false
+#hpc.integration.irods.maxIdlePerKey=-1
 
 # Globus.
 #hpc.integration.globus.globusAuthScope=urn:globus:auth:scope:transfer.api.globus.org:all
