Resolving dependency issue with accessing the classes of war from test.

--- a/src/hpc-server/hpc-ws-rs-impl/pom.xml
+++ b/src/hpc-server/hpc-ws-rs-impl/pom.xml
@@ -73,6 +73,7 @@
                     </resource>
                 </webResources>
                 <warName>hpc-server</warName>
+                <attachClasses>true</attachClasses>
            	</configuration>
         </plugin>
       <plugin>
