--- a/src/hpc-server/hpc-ws-rs-test/pom.xml
+++ b/src/hpc-server/hpc-ws-rs-test/pom.xml
@@ -72,6 +72,7 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>hpc-ws-rs-impl</artifactId>
 			<version>${project.version}</version>
+			<classifier>classes</classifier>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
