HPCDATAMGM-1839 - initial commit

--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-dev.properties
@@ -142,6 +142,7 @@ hpc.service.dataTransfer.downloadDirectory=/mnt/DMETemp/test/data/S3
 hpc.service.dataTransfer.maxSyncDownloadFileSize=10737418240 
 #hpc.service.dataTransfer.maxDeepArchiveInProgressDays=2 
 #hpc.service.dataTransfer.globusTokenExpirationPeriod=120
+#hpc.service.dataTransfer.maxPermittedTotalDownloadsSizePerUser=1000
 
 #hpc.service.dataSearch.searchResultsPageSize=100
 #hpc.service.dataSearch.defaultCollectionLevelFilter.level=1
