--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-local.properties
@@ -141,6 +141,7 @@ hpc.service.dataTransfer.downloadDirectory=${karaf.base}/data/tmp/S3
 #hpc.service.dataTransfer.maxSyncDownloadFileSize=
 #hpc.service.dataTransfer.maxDeepArchiveInProgressDays=2 
 #hpc.service.dataTransfer.globusTokenExpirationPeriod=120
+#hpc.service.dataTransfer.maxPermittedTotalDownloadsSizePerUser=1000
 
 #hpc.service.dataSearch.searchResultsPageSize=100
 #hpc.service.dataSearch.defaultCollectionLevelFilter.level=1
