--- a/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
+++ b/src/hpc-server/hpc-features/src/main/resources/hpc-server-preprod.properties
@@ -141,6 +141,7 @@ hpc.service.dataTransfer.downloadDirectory=/mnt/DMETemp/test/data/S3
 hpc.service.dataTransfer.maxSyncDownloadFileSize=10737418240 
 #hpc.service.dataTransfer.maxDeepArchiveInProgressDays=2 
 #hpc.service.dataTransfer.globusTokenExpirationPeriod=120
+#hpc.service.dataTransfer.maxPermittedTotalDownloadsSizePerUser=1000
 
 #hpc.service.dataSearch.searchResultsPageSize=100
 
