HPCDATAMGM-1846: Adding logback.

--- a/src/hpc-server/hpc-ws-rs-impl/pom.xml
+++ b/src/hpc-server/hpc-ws-rs-impl/pom.xml
@@ -364,10 +364,10 @@
       <artifactId>hpc-bus-service-impl</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
+    <dependency> 
+	  <groupId>ch.qos.logback</groupId>
+	  <artifactId>logback-classic</artifactId>
+	</dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
