--- a/src/hpc-server/hpc-ws-rs-test/pom.xml
+++ b/src/hpc-server/hpc-ws-rs-test/pom.xml
@@ -136,6 +136,10 @@
     		<artifactId>javax.mail</artifactId>
     		<version>1.6.0-rc2</version>
 		</dependency>
+		<dependency> 
+		  <groupId>ch.qos.logback</groupId>
+		  <artifactId>logback-classic</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
