--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -33,7 +33,8 @@
 		<cxf.version>3.1.9</cxf.version>
 		<cxf-xjc.version>3.2.3</cxf-xjc.version>
 		<oracle.version>19.7.0.0</oracle.version>
-		<slf4j.version>1.7.30</slf4j.version>
+		<slf4j.version>2.0.9</slf4j.version>
+		<logback.version>1.3.14</logback.version>
 		<spring.version>3.2.18.RELEASE</spring.version>
 		<spring.retry.version>1.3.0</spring.retry.version>
         <spring.security.version>4.2.10.RELEASE</spring.security.version>
@@ -247,10 +248,10 @@
 				<artifactId>slf4j-api</artifactId>
 				<version>${slf4j.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>${slf4j.version}</version>
+			<dependency> 
+			  <groupId>ch.qos.logback</groupId>
+			  <artifactId>logback-classic</artifactId>
+			  <version>${logback.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
