HPCDATAMGM-1828: Add default values for dbGaO fields. Add aspera bucket in config

--- a/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
@@ -25,3 +25,6 @@ spring.thymeleaf.cache: false
 
 gov.nih.nci.hpc.drive.clientid=< Configure Me >
 gov.nih.nci.hpc.drive.clientsecret=< Configure Me >
+
+gov.nih.nci.hpc.asperaBucket=< Configure Me >
+
