--- a/src/hpc-web/src/main/resources/appconfigs/local-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/local-env.conf
@@ -32,3 +32,6 @@ spring.thymeleaf.cache: false
 
 gov.nih.nci.hpc.drive.clientid=< Configure Me >
 gov.nih.nci.hpc.drive.clientsecret=< Configure Me >
+
+gov.nih.nci.hpc.asperaBucket=< Configure Me >
+
