--- a/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
@@ -26,3 +26,5 @@ spring.thymeleaf.cache: false
 
 gov.nih.nci.hpc.drive.clientid=< Configure Me >
 gov.nih.nci.hpc.drive.clientsecret=< Configure Me >
+
+gov.nih.nci.hpc.asperaBucket=< Configure Me >
