--- a/test-automation/cuketests/pom.xml
+++ b/test-automation/cuketests/pom.xml
@@ -34,7 +34,7 @@
     <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
-       <version>2.6.2</version>
+       <version>2.8.9</version>
     </dependency>
 
 	<!-- cucumber libraries -->
@@ -156,7 +156,7 @@
                     <jsonFiles>
                       <param>**/*.json</param>
                     </jsonFiles>
-                    <outputDirectory>${project.build.directory}</outputDirectory>
+                    <outputDirectory>${project.build.directory}/cucumber-html-report</outputDirectory>
                     <cucumberOutput>${project.build.directory}</cucumberOutput>
                 </configuration>
             </execution>
